package edu.hitsz.observer;

/**
 * @author leng
 */
public interface Subscriber {
    /**
     * 对炸弹道具生效的反映
     */
    void update();
}
