@startuml
'https://plantuml.com/sequence-diagram

class BombProp {
'发布者 publisher
    - subscribers:List<Subscriber>
    + addSubscribers(List<Subscriber> subscribers):void
    + removeSubscribers(List<Subscriber> subscribers):void
    + notifyAllSubscriber(): void
    + activeProp(HeroAircraft):void
}
interface Subscriber{
'订阅者接口'
    + {abstract}update():void
}


BombProp o--> Subscriber
BaseGame --> BombProp
BaseGame ..> BaseBullet
BaseGame ..> AbstractEnemyAircraft

Subscriber <|-- BaseBullet
Subscriber <|-- AbstractEnemyAircraft

abstract class AbstractEnemyAircraft {  /'订阅者'/
    + update():void
}
class SuperEnemy {  /'订阅者'/
    + update():void
}
class MobEnemy {  /'订阅者'/
    + update():void
}
class BossEnemy {  /'订阅者'/
    + update():void
}
AbstractEnemyAircraft <|-- SuperEnemy
AbstractEnemyAircraft <|-- MobEnemy
AbstractEnemyAircraft <|-- BossEnemy
abstract class BaseBullet {  /'订阅者'/
    + update():void
}
@enduml